Findbugs behoben, 7 Bugs übrig die nicht schlimm sind!